feat: allow users to leave betting pools
